...
          padding: const EdgeInsets.only(top: 160.0),
          child: AnimatedAlign(
            alignment: _alignment,
            duration: const Duration(seconds: 1),
            curve: Curves.fastOutSlowIn,
            child: Text(
              'GrasSport',
              style: TextStyle(
                fontFamily: 'blinker',
                fontSize: 35.0,
                color: c2,
                decoration: TextDecoration.none,
              ),
...
