...
import 'package:grassport_app/presentation/screens/myPlacesHome/welcome.dart';
import 'package:grassport_app/presentation/styles/side_to_side_transition.dart';

const String routeStartApp = '/start';
const String routeCharge = '/charge';
const String routePreviews = '/start/previews';
const String routeLogin = '/start/login';
const String routeRegister = '/start/register';
const String routeToAdminPanel = '/home/admin/panel';
const String routeAgreementLocation = '/agreementLocation';
const String routeSelectLocation = '/agreementLocation/selectCurrentLocation';
const String routeGpsLocation = '/agreementLocation/gpsLocation';
const String routeHomeApp = '/home';
...
