...
    UserDisplayed? isLogged = context.watch<LoggedUser>().state;
    bool isAdmin = context.watch<IsAdmin>().state;

    return Column(
      children: [
        TextButton(
          key: const Key('Previews - Next Preview btn'),
          style: TextButton.styleFrom(
              backgroundColor: c8,
              minimumSize: const Size(280, 50),
              shape: const RoundedRectangleBorder(
                borderRadius: BorderRadius.all(Radius.circular(15)),
              )),
...
